--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     </div>
       <footer class="footer">
         <div class="container text-center">
-          <span>your-website-name.com</span>
+          <span>sigmascope.ch</span>
         </div>
       </footer>
 
